# ContingencyTable

./: .gitignore  AGENTS.md  CMakeLists.txt  PARTITION_VERIFICATION.md  README.md  VERIFICATION_RESULTS.md
examples/: contingency_example.cpp  feature_selector.cpp  find_partition.cpp  parse_csv.cpp  verify_rowfilter.cpp
examples/datasets/: data_set_1.csv
examples/datasets/titanic_output/meta_data/: hash.txt
include/ContingencyTable/: ContingencyTable.h  FeatureSelector.h
src/: ContingencyTable.cpp  FeatureSelector.cpp
tests/: CMakeLists.txt  unit_tests.cpp
